@@ -4,6 +4,7 @@
 2. Show invalid files in playlists using red text.
 3. Add 'Remove Invalid Tracks' to playlist context menu.
 4. Allow OPML URLs in podcast add URL dialog.
+5. Allow to read local RSS/OPML files in podcast search dialog.
 
 2.3.3
 -----
